<resources>
    <string name="app_name">滇池水务</string>
    <string name="system_name">滇池智慧水务信息系统</string>
    <string name="system_name1">滇池设备管理信息系统</string>
    <string name="company_info">北京清控人居环境研究院（有限公司）©版权所有</string>
    <string name="activity_machinemanage_radiogroup_machinemanage">设备信息管理</string>
    <string name="activity_machinemanage_radiogroup_consmanage">构筑物管理</string>
    <string name="activity_machinemanage_radiogroup_machineinfo">设备信息查看</string>
    <string name="activity_machinemanage_radiogroup_planmanage">保养计划管理</string>
    <string name="activity_config_title">设置</string>
    <string name="activity_userright_title">功能导航区</string>
    <string name="activity_userright_group_machinemanage">设备管理</string>
    <string name="activity_userright_item_machineinfo">设备信息查看</string>
    <string name="activity_userright_item_repairmanage">设备维修管理</string>
    <string name="activity_userright_item_maintainhistory">维修历史记录</string>
    <string name="activity_userright_item_upkeephistory">保养历史记录</string>
    <string name="activity_repairmanageitem_verify">审核信息</string>
    <string name="activity_repairmanageitem_repair">维修信息</string>
    <string name="activity_repairmanageitem_people">人员信息</string>
    <string name="activity_repairmanageitem_fault">故障信息</string>
    <string name="activity_repairmanageitem_basic">基本信息</string>
    <string name="activity_repairmanageitem_name">设备名称</string>
    <string name="activity_repairmanageitem_position">安装位置</string>
    <string name="activity_repairmanageitem_starttime">投入使用日期</string>
    <string name="activity_repairmanageitem_type">设备型号</string>
    <string name="activity_repairmanageitem_sn">设备编号</string>
    <string name="activity_repairmanageitem_submit">提交</string>
    <string name="activity_repairmanageitem_manufacturer">厂商</string>
    <string name="activity_repairmanageitem_faulttime">故障发生时间</string>
    <string name="activity_repairmanageitem_faultphenomenon">故障现象</string>
    <string name="activity_repairmanageitem_handlestep">应急措施选择</string>
    <string name="activity_repairmanageitem_otherstep">其他措施</string>
    <string name="activity_repairmanageitem_taskpeople">巡检员</string>
    <string name="activity_repairmanageitem_repairsttime">工单派发时间</string>
    <string name="activity_repairmanageitem_repairendtime">修理完成时间</string>
    <string name="activity_repairmanageitem_repairsender">工单派发人</string>
    <string name="activity_repairmanageitem_repairtimecost">所需工时</string>
    <string name="activity_repairmanageitem_repaircontent">维修内容及要求</string>
    <string name="activity_repairmanageitem_repairresult">工作完成情况及处理措施</string>
    <string name="activity_repairmanageitem_repairthingcost">备品备件使用情况</string>
    <string name="activity_repairmanageitem_ddverifyresult">设备科审核结果</string>
    <string name="activity_repairmanageitem_pmverifyresult">厂长审核结果</string>
    <string name="activity_repairmanageitem_verifysucceed">审核通过</string>
    <string name="activity_repairmanageitem_verifyfailed">审核未通过</string>
    <string name="activity_repairmanageitem_verifypeople">审核人</string>
    <string name="activity_repairmanageitem_equipmentopinion">设备科意见</string>
    <string name="activity_repairmanageitem_productionopinion">生产科意见</string>
    <string name="activity_repairmanageitem_plantopinion">厂领导意见</string>
    <string name="activity_repairmanageitem_backstate">返回级别</string>
    <string name="activity_repairmanageitem_tasktype">返回科室</string>
    <string name="activity_repairmanageitem_repairmoneycost">维修金额</string>
    <string name="activity_deviceselect_construction">构筑物列表</string>
    <string name="activity_deviceselect_search">查询</string>
    <string name="activity_deviceselect_devicename">设备名称</string>
    <string name="activity_deviceselect_consname">构筑物</string>
    <string name="activity_upkeephistoryitem_devicegroup">设备信息</string>
    <string name="activity_upkeephistoryitem_maintaingroup">养护信息</string>
    <string name="activity_upkeephistoryitem_taskgroup">工单信息</string>
    <string name="activity_upkeephistoryitem_approvegroup">审核信息</string>
    <string name="activity_upkeephistoryitem_installpos">安装位置</string>
    <string name="activity_upkeephistoryitem_devicename">设备名称</string>
    <string name="activity_upkeephistoryitem_maintainpos">养护部位</string>
    <string name="activity_upkeephistoryitem_maintaindetail">保养内容</string>
    <string name="activity_upkeephistoryitem_maintainperiod">保养周期</string>
    <string name="activity_upkeephistoryitem_maintainnext">需保养时间</string>
    <string name="activity_upkeephistoryitem_taskdetail">备注</string>
    <string name="activity_upkeephistoryitem_sendtime">派发时间</string>
    <string name="activity_upkeephistoryitem_sendperson">派发人</string>
    <string name="activity_upkeephistoryitem_needhour">所需工时</string>
    <string name="activity_upkeephistoryitem_needfinishtime">要求完成时间</string>
    <string name="activity_upkeephistoryitem_checktime">回单时间</string>
    <string name="activity_upkeephistoryitem_maintainperson">养护人</string>
    <string name="activity_upkeephistoryitem_backperson">回单人</string>
    <string name="activity_upkeephistoryitem_actualhour">实际工时</string>
    <string name="activity_upkeephistoryitem_maintainresult">完成情况及处理措施</string>
    <string name="activity_upkeephistoryitem_approveperson">审阅人</string>
    <string name="activity_upkeephistoryitem_approveresult">审核结果</string>
    <string name="activity_upkeephistoryitem_approvetime">审核时间</string>
    <string name="activity_upkeephistoryitem_ddopinion">科长意见</string>
    <string name="activity_upkeephistoryitem_send">派发工单</string>
    <string name="activity_upkeephistoryitem_report">上报工单</string>
    <string name="activity_upkeephistoryitem_approve">审核工单</string>
    <string name="view_datetimepick_ok">确定</string>
    <string name="view_datetimepick_cancel">取消</string>
    <string name="view_datetimepick_reset">重置</string>
    <string name="view_addmediafile_takephoto">拍照</string>
    <string name="view_addmediafile_photo">图片</string>
    <string name="view_addmediafile_voice">音频</string>
    <string name="view_addmediafile_video">视频</string>
    <string name="view_addmediafile_file">文件</string>
    <string name="view_addmediafile_location">位置</string>
    <string name="view_userright_group_performance">绩效管理</string>
    <string name="view_userright_group_analysis">生产统计分析</string>
    <string name="activity_config_logout">注销</string>
    <string name="activity_login_summit">登    录</string>
    <string name="activity_login_reset">重    置</string>
    <string name="activity_datainput_add">添加</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载。。。</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="view_datafilter_fasttime">快速选择</string>
    <string name="view_datafilter_time">时间选择</string>
    <string name="view_datafilter_starttime">开始时间</string>
    <string name="view_datafilter_endtime">结束时间</string>
    <string name="view_datafilter_pos">安装位置</string>
    <string name="view_datafilter_state">工单状态</string>
    <string name="view_datafilter_name">设备名称</string>
    <string name="view_datafilter_ok">搜    索</string>
    <string name="view_webview_back">返    回</string>
    <string name="view_webview_forward">前    进</string>
    <string name="view_webview_stop">停    止</string>
    <string name="view_webview_refresh">刷    新</string>
    <string name="item_deviceproperty_name">参    数    名    称</string>
    <string name="item_deviceproperty_value">参    数    值</string>
    <string name="item_deviceparam_code">编    号</string>
    <string name="item_deviceparam_name">参数名称</string>
    <string name="item_deviceparam_value">参数值</string>
    <string name="item_deviceparam_remark">备    注</string>
    <string name="item_devicestatu_code">编    号</string>
    <string name="item_devicestatu_name">参数名称</string>
    <string name="item_devicestatu_value">参数值</string>
    <string name="item_devicestatu_remark">备    注</string>
    <string name="item_devicefiles_code">编号</string>
    <string name="item_devicefiles_name">文件名</string>
    <string name="item_devicefiles_operation">操作</string>
    <string name="item_devicefiles_dl">下    载</string>
    <string name="item_devicefiles_pre">浏    览</string>
    <string name="activity_userinfor_pic">头    像</string>
    <string name="activity_userinfor_acc">账    号</string>
    <string name="activity_userinfor_name">姓    名</string>
    <string name="activity_userinfor_role">岗    位</string>
    <string name="activity_userinfor_plant">厂    名</string>
    <string name="activity_userinfor_changepsw">修改密码</string>
    <string name="activity_userinfor_logout">注    销</string>
    <string name="activity_repairstateflow_state0">报修单已上报</string>
    <string name="activity_repairstateflow_state1">报修单已确认</string>
    <string name="activity_repairstateflow_state2">维修单已派发</string>
    <string name="activity_repairstateflow_state3">维修单填写中</string>
    <string name="activity_repairstateflow_state4">维修单已上报</string>
    <string name="activity_repairstateflow_state5"></string>
    <string name="activity_repairstateflow_state6">设备科长审核通过</string>
    <string name="activity_repairstateflow_state7">生产科长已确认</string>
    <string name="activity_repairstateflow_state8">厂长审核通过</string>
    <string name="activity_maintainstateflow_state1">已派发工单</string>
    <string name="activity_maintainstateflow_state2">已回单</string>
    <string name="activity_maintainstateflow_state3">审核通过</string>
    <string name="activity_maintainstateflow_state4">审核未通过</string>
    <string name="activity_maintainstateflow_state5">已填写待上报</string>
    <string-array name="view_datafilter_fasttimelist">
        <item>请选择</item>
        <item>今天</item>
        <item>本月</item>
        <item>上月</item>
        <item>今年</item>
        <item>去年</item>
        <item>最近7天</item>
        <item>最近1月</item>
    </string-array>
    <string-array name="view_datafilter_upkeepplanstatelist">
        <item>不限</item>
        <item>已列入计划</item>
        <item>养护中</item>
        <item>审核未通过</item>
        <item>完成</item>
        <item>回单待审核</item>
    </string-array>
    <string-array name="view_datafilter_upkeepstatelist">
        <item>不限</item>
        <item>已派发工单</item>
        <item>已回单</item>
        <item>审核通过</item>
        <item>审核未通过</item>
        <item>已填写待上报</item>
    </string-array>
    <string-array name="view_datafilter_repairstatelist">
        <item>不限</item>
        <item>报修单已上报</item>
        <item>报修单已确认</item>
        <item>维修单已派发</item>
        <item>维修单填写中</item>
        <item>维修单已上报</item>
        <item>维修单返回修改</item>
        <item>设备科长审核通过</item>
        <item>生产科长已确认</item>
    </string-array>
    <string-array name="pm_allow_state">
        <item>维修工维修</item>
        <item>设备科长审核</item>
    </string-array>
    <string-array name="deviceinforlist">
        <item>基本信息</item>
        <item>运行管理</item>
        <item>技术参数</item>
        <item>运行参数</item>
        <item>技术文档</item>
    </string-array>
    <string name="menu_deviceinfoitem_refresh">刷新</string>
    <string name="menu_deviceinfoitem_maintainhistory">维修历史</string>
    <string name="menu_deviceinfoitem_upkeephistory">保养历史</string>
    <string name="menu_deviceinfoitem_showdevice">选择设备</string>
    <string name="menu_deviceinfolist_maintainhistory">维修历史</string>
    <string name="menu_deviceinfolist_upkeephistory">保养历史</string>
    <string name="menu_deviceinfolist_showcons">按构筑物查找</string>
    <string name="menu_repairmanage_add">故障上报</string>
    <string name="menu_repairmanage_refresh">刷新</string>
    <string name="menu_repairmanage_nofilter">所有任务</string>
    <string name="menu_repairmanage_filter">可操作任务</string>
    <string name="menu_repairmanage_drawshow">筛选条件</string>
</resources>