<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left" >

        <Button
            style="@style/MediaFileViewButtonStyle"
            android:id="@+id/view_addmediafile_takephoto"
            android:text="@string/view_addmediafile_takephoto" />

        <Button
            style="@style/MediaFileViewButtonStyle"
            android:id="@+id/view_addmediafile_photo"
            android:text="@string/view_addmediafile_photo" />

        <Button
            style="@style/MediaFileViewButtonStyle"
            android:id="@+id/view_addmediafile_voice"
            android:text="@string/view_addmediafile_voice" />

        <Button
            style="@style/MediaFileViewButtonStyle"
            android:id="@+id/view_addmediafile_video"
            android:text="@string/view_addmediafile_video" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left" >

        <Button
            style="@style/MediaFileViewButtonStyle"
            android:id="@+id/view_addmediafile_file"
            android:text="@string/view_addmediafile_file" />

        <Button
            style="@style/MediaFileViewButtonStyle"
            android:id="@+id/view_addmediafile_location"
            android:text="@string/view_addmediafile_location" />
    </LinearLayout>

</LinearLayout>