<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    
    
    <item
        android:id="@+id/menu_repairmanage_add"
        android:title="@string/menu_repairmanage_add"
        android:showAsAction="never" />
    
    <item 
        android:id="@+id/menu_repairmanage_filter"
        android:title="@string/menu_repairmanage_filter"
        android:checked="true"
        android:checkable="true"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_repairmanage_message"
        android:showAsAction="always"
        android:title=""
        android:actionViewClass="android.widget.TextView"/>
    
    <item
        android:id="@+id/menu_repairmanage_drawlayout"
        android:showAsAction="never"
        android:title="@string/menu_repairmanage_drawshow"/>

</menu>
