<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity_repairmanageitem_tablelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        style="@style/activity_repairmanageitem_textview_group"
        android:text="@string/activity_repairmanageitem_basic" />

    <TextView style="@style/item_divide" />

    <TableRow
        android:id="@+id/activity_repairmanageitem_name_tr"
        style="@style/activity_repairmanageitem_tablerow" >

        <TextView
            style="@style/activity_repairmanageitem_textview_item"
            android:text="@string/activity_repairmanageitem_name" />

        <TextView
            android:id="@+id/activity_repairmanageitem_name"
            style="@style/activity_repairmanageitem_textview" />
    </TableRow>

    <TextView style="@style/item_divide" />

    <TableRow
        android:id="@+id/activity_repairmanageitem_type_tr"
        style="@style/activity_repairmanageitem_tablerow" >

        <TextView
            style="@style/activity_repairmanageitem_textview_item"
            android:text="@string/activity_repairmanageitem_type" />

        <TextView
            android:id="@+id/activity_repairmanageitem_type"
            style="@style/activity_repairmanageitem_textview" />
    </TableRow>

    <TextView style="@style/item_divide" />

    <TableRow
        android:id="@+id/activity_repairmanageitem_sn_tr"
        style="@style/activity_repairmanageitem_tablerow" >

        <TextView
            style="@style/activity_repairmanageitem_textview_item"
            android:text="@string/activity_repairmanageitem_sn" />

        <TextView
            android:id="@+id/activity_repairmanageitem_sn"
            style="@style/activity_repairmanageitem_textview" />
    </TableRow>

    <TextView style="@style/item_divide" />

    <TableRow
        android:id="@+id/activity_repairmanageitem_position_tr"
        style="@style/activity_repairmanageitem_tablerow" >

        <TextView
            style="@style/activity_repairmanageitem_textview_item"
            android:text="@string/activity_repairmanageitem_position" />

        <TextView
            android:id="@+id/activity_repairmanageitem_position"
            style="@style/activity_repairmanageitem_textview" />
    </TableRow>

    <TextView style="@style/item_divide" />

    <TableRow
        android:id="@+id/activity_repairmanageitem_starttime_tr"
        style="@style/activity_repairmanageitem_tablerow" >

        <TextView
            style="@style/activity_repairmanageitem_textview_item"
            android:text="@string/activity_repairmanageitem_starttime" />

        <TextView
            android:id="@+id/activity_repairmanageitem_starttime"
            style="@style/activity_repairmanageitem_textview" />
    </TableRow>

    <TextView style="@style/item_divide" />

    <TableRow
        android:id="@+id/activity_repairmanageitem_manufacturer_tr"
        style="@style/activity_repairmanageitem_tablerow" >

        <TextView
            style="@style/activity_repairmanageitem_textview_item"
            android:text="@string/activity_repairmanageitem_manufacturer" />

        <TextView
            android:id="@+id/activity_repairmanageitem_manufacturer"
            style="@style/activity_repairmanageitem_textview" />
    </TableRow>

</TableLayout>