<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity_repairmanageitem_tablelayout" >

    <TextView
        style="@style/activity_repairmanageitem_textview_group"
        android:text="@string/activity_repairmanageitem_fault" />

    <TextView style="@style/item_divide" />

    <TableRow
        android:id="@+id/activity_repairmanageitem_faulttime_tr"
        style="@style/activity_repairmanageitem_tablerow" >

        <TextView
            style="@style/activity_repairmanageitem_textview_item"
            android:text="@string/activity_repairmanageitem_faulttime" />

        <TextView
            android:id="@+id/activity_repairmanageitem_faulttime"
            style="@style/activity_repairmanageitem_textview" />
    </TableRow>

    <TextView style="@style/item_divide" />

    <TableRow
        android:id="@+id/activity_repairmanageitem_faultphenomenon_tr"
        style="@style/activity_repairmanageitem_tablerow" >

        <TextView
            style="@style/activity_repairmanageitem_textview_item"
            android:text="@string/activity_repairmanageitem_faultphenomenon" />

        <TextView
            android:id="@+id/activity_repairmanageitem_faultphenomenon"
            style="@style/activity_repairmanageitem_textview" />
    </TableRow>

    <TextView style="@style/item_divide" />

    <TableRow
        android:id="@+id/activity_repairmanageitem_handlestep_tr"
        style="@style/activity_repairmanageitem_tablerow" >

        <TextView
            style="@style/activity_repairmanageitem_textview_item"
            android:text="@string/activity_repairmanageitem_handlestep" />

        <TextView
            android:id="@+id/activity_repairmanageitem_handlestep"
            style="@style/activity_repairmanageitem_textview" />
    </TableRow>

    <TextView style="@style/item_divide" />

    <TableRow
        android:id="@+id/activity_repairmanageitem_otherstep_tr"
        style="@style/activity_repairmanageitem_tablerow" >

        <TextView
            style="@style/activity_repairmanageitem_textview_item"
            android:text="@string/activity_repairmanageitem_otherstep" />

        <TextView
            android:id="@+id/activity_repairmanageitem_otherstep"
            style="@style/activity_repairmanageitem_textview" />
    </TableRow>

</TableLayout>